# dol

./: .gitignore  .gitmodules  README.md
bot-rs/: Cargo.toml  README.md
bot-rs/crates/bot-adapters/: Cargo.toml
bot-rs/crates/bot-adapters/src/: chaos.rs  dryrun.rs  execution.rs  lib.rs  pacifica.rs  pacifica_auth.rs  pacifica_sign.rs  rate_limit.rs  venue.rs
bot-rs/crates/bot-adapters/tests/: dryrun_smoke.rs  pacifica_auth_live.rs  pacifica_auth_unit.rs  pacifica_live.rs  pacifica_sdk_subprocess.rs  pacifica_signing_parity.rs
bot-rs/crates/bot-adapters/tests/fixtures/: pacifica_signing.json
bot-rs/crates/bot-adapters/tests/fixtures/dryrun/backpack/: ARB.json  AVAX.json  BNB.json  BTC.json  ETH.json  SOL.json  SUI.json
bot-rs/crates/bot-adapters/tests/fixtures/dryrun/hyperliquid/: ARB.json  AVAX.json  BNB.json  BTC.json  ETH.json  PAXG.json  SOL.json  SUI.json  XAG.json  XAU.json
bot-rs/crates/bot-adapters/tests/fixtures/dryrun/lighter/: ARB.json  AVAX.json  BNB.json  BTC.json  ETH.json  SOL.json  SUI.json
bot-rs/crates/bot-adapters/tests/fixtures/dryrun/pacifica/: ARB.json  AVAX.json  BNB.json  BTC.json  ETH.json  PAXG.json  SOL.json  SUI.json  XAG.json  XAU.json
bot-rs/crates/bot-cli/: Cargo.toml
bot-rs/crates/bot-cli/src/: main.rs
bot-rs/crates/bot-cli/src/cmd/: demo.rs
bot-rs/crates/bot-math/: Cargo.toml
bot-rs/crates/bot-math/src/: breakeven.rs  cost.rs  cvar.rs  impact.rs  leverage.rs  lib.rs  mfg.rs  optimum.rs  ou.rs  phi.rs  routing.rs
bot-rs/crates/bot-math/tests/: proptests.rs
bot-rs/crates/bot-runtime/: Cargo.toml
bot-rs/crates/bot-runtime/benches/: decision_bench.rs
bot-rs/crates/bot-runtime/src/: adapter_health.rs  backpressure.rs  clock.rs  cycle_lock.rs  decision.rs  fair_value.rs  history.rs  lib.rs  live_gate.rs  metrics.rs  nav.rs  scoring.rs  signal.rs  tick.rs  tracing_redact.rs
bot-rs/crates/bot-runtime/src/risk/: concentration.rs  cvar_budget.rs  drawdown.rs  heartbeat.rs  kill_switch.rs  mod.rs  stack.rs  watchdog.rs
bot-rs/crates/bot-runtime/tests/: pacifica_live_tick.rs  tick_smoke.rs
bot-rs/crates/bot-strategy-v3/: Cargo.toml
bot-rs/crates/bot-strategy-v3/src/: fsm_controller.rs  funding_cycle_lock.rs  lib.rs  lock_typestate.rs  stochastic.rs
bot-rs/crates/bot-strategy-v3/tests/: stochastic_proptests.rs
bot-rs/crates/bot-tests/: Cargo.toml
bot-rs/crates/bot-tests/src/: lib.rs
bot-rs/crates/bot-tests/tests/: fsm_diagram_parity.rs  parity_extras.rs  parity_funding_cycle_lock.rs  parity_math.rs  parity_phase1.rs  parity_phase2a.rs  parity_stochastic.rs  strategy_comparison.rs
bot-rs/crates/bot-types/: Cargo.toml
bot-rs/crates/bot-types/src/: lib.rs  sym.rs
bot-rs/crates/bot-venues/: Cargo.toml
bot-rs/crates/bot-venues/src/: config.rs  error.rs  event.rs  lib.rs  venue.rs
bot-rs/crates/bot-venues/src/lighter/: mod.rs  rest.rs  types.rs  ws.rs
bot-rs/crates/bot-venues/src/net/: circuit.rs  mod.rs  reconnect.rs
bot-rs/crates/bot-venues/src/pacifica/: mod.rs  rest.rs  types.rs  ws.rs
bot-rs/crates/bot-venues/tests/: live_ws.rs  mock_ws.rs
bot-rs/docs/: v0-punchlist.md
contracts/: README.md  package.json
dashboard/: README.md  package.json
strategy/: PRINCIPLES.md  README.md  requirements.txt
strategy/docs/: integration-spec.md  math-aurora-omega-appendix.md  math-derivation.md  math-formulas.md  math-frontier.md  math-rigorous.md  pacifica-discovery.md
strategy/output/rust_parity/: funding_cycle_lock_fixtures.json
strategy/rust_fixtures/: EDGE_CASES.md  adf.json  bernstein_leverage.json  break_even_hold.json  cap_routing.json  capacity_ceiling.json  critical_aum.json  cvar.json  dol_sustainable_flow.json  dry_run_end_to_end.json  effective_spread_with_impact.json  expected_residual_income.json  fit_ou.json  hurst.json  lifecycle.json  mandate_floor.json  mfg_competitor.json  optimal_notional.json  optimal_trading_contribution.json  ou_time_averaged_spread.json  phi.json  round_trip_cost.json  slippage.json
strategy/scripts/: README.md  analyze_persistence.py  backtest_v2.py  backtest_v3_historical.py  dry_run_v3_5.py  generate_funding_lock_parity_fixtures.py  generate_rust_fixtures.py  lifecycle_model.py  merge_history.py  optimize_v3_5.py  poll_aggregated.py  pull_external_history.py  validate_aurora_omega.py  validate_formulas.py  validate_frontier.py  validate_rigorous.py  validate_risk_budget.py  validate_sprint2_3.py
strategy/strategy/: cost_model.py  depth_threshold.py  fair_value_oracle.py  fallback_router.py  forecast_scoring.py  fractal_delta.py  frontier.py  fsm_controller.py  funding_bandit.py  funding_cycle_lock.py  hedge_ioc.py  latency_penalty.py  lifecycle.py  offset_controller.py  partial_fill_model.py  portfolio.py  rigorous.py  risk_stack.py  slippage_calibration.py  stochastic.py  toxicity_filter.py
strategy/tests/: conftest.py  test_cost_model.py  test_forecast_scoring.py  test_frontier.py  test_funding_cycle_lock.py  test_misc.py  test_portfolio.py  test_rigorous.py  test_stochastic.py
