[package]
name = "bot-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bot-types  = { path = "../bot-types" }
bot-venues = { path = "../bot-venues" }

async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
