[package]
name = "bot-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
bot-types  = { path = "../bot-types" }
bot-venues = { path = "../bot-venues" }

async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand         = "0.8"
uuid         = { version = "1", features = ["v4"] }
bs58         = "0.5"
zeroize      = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
tokio         = { workspace = true, features = ["full", "test-util"] }
futures-util  = { workspace = true }
