[package]
name = "bot-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "bot-rs"
path = "src/main.rs"

[dependencies]
anyhow           = { workspace = true }
async-trait      = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json       = { workspace = true }
chrono           = { workspace = true }
clap             = { version = "4", features = ["derive"] }
ctrlc            = "3"

bot-venues       = { path = "../bot-venues" }

# Step B
bot-types        = { path = "../bot-types" }
bot-adapters     = { path = "../bot-adapters" }
bot-runtime      = { path = "../bot-runtime" }
