[package]
name = "bot-strategy-v3"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bot-types = { path = "../bot-types" }
thiserror  = { workspace = true }
serde      = { workspace = true }

[dev-dependencies]
proptest = "1"
