[package]
name = "bot-venues"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
